samples/_failures_safe/1761367622_bc3214_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4aaf7293.c: In function ‘main’:
./samples/SAFE/__tmp_4aaf7293.c:180:5: error: expected declaration or statement at end of input
  180 |     print_matrix(mat1);
      |     ^~~~~~~~~~~~
